完成 S4-09 最小文章搜索
